# bazel-rules

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  LICENSE-MIT  MODULE.bazel  NOTICE.txt  README.md  defs.bzl
.github/: AGENT_INSTRUCTIONS.md
.github/workflows/: production-release.yml  registry-update.yml  staging-release.yml  upload-source-archives.yml  validation.yml
bcr-modules/: BUILD.bazel  BUILD.bazel.tpl  urls.bzl
bcr-modules/macros/: add_module_macro.bzl  module_macro.bzl  upload_macro.bzl
bcr-modules/modules/rules_bsw/: BUILD.bazel  README.md
bcr-modules/modules/rules_bsw/0.0.1/: BUILD.bazel
bcr-modules/modules/rules_bsw/srcs/: BUILD.bazel  MODULE.bazel  defs.bzl
bcr-modules/modules/rules_cfg5/: BUILD.bazel  README.md
bcr-modules/modules/rules_cfg5/0.0.2/: BUILD.bazel
bcr-modules/modules/rules_cfg5/0.0.3/: BUILD.bazel
bcr-modules/modules/rules_cfg5/0.0.4/: BUILD.bazel
bcr-modules/modules/rules_cfg5/0.0.5/: BUILD.bazel
bcr-modules/modules/rules_cfg5/srcs/: BUILD.bazel  MODULE.bazel  README.md  defs.bzl  generate.bzl
bcr-modules/modules/rules_cfg5/srcs/private/: generate.bzl  rules.bzl  start.bzl
bcr-modules/modules/rules_cfg5/srcs/private/common/: component_refs.bzl
bcr-modules/modules/rules_cfg5/srcs/private/templates/: filter_linux.sh.tpl  filter_windows.ps1.tpl
bcr-modules/modules/rules_common/: BUILD.bazel  README.md
bcr-modules/modules/rules_common/0.2.0/: BUILD.bazel
bcr-modules/modules/rules_common/srcs/: BUILD.bazel  MODULE.bazel  copy_file.bzl  create_davinci_tool_workspace.bzl  extract.bzl  merge_packages.bzl
bcr-modules/modules/rules_davinci_developer/: BUILD.bazel  README.md
bcr-modules/modules/rules_davinci_developer/0.0.1/: BUILD.bazel
bcr-modules/modules/rules_davinci_developer/srcs/: BUILD.bazel  MODULE.bazel  rules.bzl  toolchains.bzl
bcr-modules/modules/rules_davinci_project/: BUILD.bazel
bcr-modules/modules/rules_davinci_project/0.0.1/: BUILD.bazel
bcr-modules/modules/rules_davinci_project/0.0.2/: BUILD.bazel
bcr-modules/modules/rules_davinci_project/srcs/: BUILD.bazel  rules.bzl
bcr-modules/modules/rules_dvteam/: BUILD.bazel  README.md
bcr-modules/modules/rules_dvteam/0.0.1/: BUILD.bazel
bcr-modules/modules/rules_dvteam/srcs/: BUILD.bazel  MODULE.bazel  defs.bzl
bcr-modules/modules/rules_gradle/: BUILD.bazel  README.md
bcr-modules/modules/rules_gradle/0.0.1/: BUILD.bazel
bcr-modules/modules/rules_gradle/srcs/: BUILD.bazel  MODULE.bazel  defs.bzl
bcr-modules/modules/rules_ocs/: BUILD.bazel  README.md
bcr-modules/modules/rules_ocs/0.0.1/: BUILD.bazel
bcr-modules/modules/rules_ocs/srcs/: BUILD.bazel  MODULE.bazel  defs.bzl
bcr-modules/rules/: BUILD.bazel  defs.bzl  metadata_json.bzl  module.bzl  module_dot_bazel.bzl  source_json.bzl
docs/: creating-new-module.md  getting-started.md  index.html  toolchains.md  updating-module-version.md
github/workflows/: upload-source-archives.yml
modules/rules_cfg5/srcs/: defs.bzl  generate.bzl
modules/rules_common/srcs/: MODULE.bazel  download_and_merge.bzl
modules/rules_davinci_developer/srcs/: BUILD.bazel  MODULE.bazel
modules/rules_dvteam/srcs/: MODULE.bazel
modules/rules_gradle/srcs/: BUILD.bazel  MODULE.bazel
modules/rules_ocs/srcs/: BUILD.bazel  MODULE.bazel
modules/rules_ocs/srcs/private/: toolchains.bzl
rules/: BUILD.bazel  defs.bzl  toolchains.md
rules/cfg5/: BUILD  BUILD.bazel  README.md  filter_linux.sh.tpl  filter_windows.ps1.tpl  generate_cc.bzl  rules.bzl  toolchains.bzl
rules/common/: BUILD.bazel  copy_file.bzl  create_davinci_tool_workspace.bzl
rules/davinci_developer/: BUILD.bazel  README.md  toolchains.bzl
rules/dvteam/: BUILD.bazel  README.md  rules.bzl
rules/gradle/: BUILD.bazel  README.md  rules.bzl  toolchains.bzl
rules/ocs/: BUILD.bazel  README.md  app_building.bzl  rules.bzl  toolchains.bzl
tools/: BUILD.bazel  add_module.sh  build_revisions_diff.sh  compare_modules.sh  get_archive_override.sh
vector-bazel-central-registry/modules/rules_bsw/: metadata.json
vector-bazel-central-registry/modules/rules_bsw/0.0.1/: MODULE.bazel  source.json
vector-bazel-central-registry/modules/rules_cfg5/: metadata.json
vector-bazel-central-registry/modules/rules_cfg5/0.0.2/: MODULE.bazel  source.json
vector-bazel-central-registry/modules/rules_cfg5/0.0.3/: MODULE.bazel  source.json
vector-bazel-central-registry/modules/rules_cfg5/0.0.4/: MODULE.bazel  source.json
vector-bazel-central-registry/modules/rules_cfg5/0.0.5/: MODULE.bazel  source.json
vector-bazel-central-registry/modules/rules_common/: metadata.json
vector-bazel-central-registry/modules/rules_common/0.0.1/: MODULE.bazel
vector-bazel-central-registry/modules/rules_common/0.2.0/: MODULE.bazel  source.json
vector-bazel-central-registry/modules/rules_davinci_developer/0.0.1/: MODULE.bazel  source.json
vector-bazel-central-registry/modules/rules_davinci_project/: metadata.json
vector-bazel-central-registry/modules/rules_davinci_project/0.0.1/: MODULE.bazel
vector-bazel-central-registry/modules/rules_davinci_project/0.0.2/: MODULE.bazel
vector-bazel-central-registry/modules/rules_dvteam/0.0.1/: MODULE.bazel  source.json
vector-bazel-central-registry/modules/rules_ocs/0.0.1/: MODULE.bazel  (+1 more)
(+12 files in other folders)
