"""Module to handle everything bazel related concerning custom modules and rules"""

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1")
bazel_dep(name = "stardoc", version = "0.7.2")
bazel_dep(name = "ape", version = "1.0.1")
bazel_dep(name = "aspect_rules_js", version = "2.0.1")
bazel_dep(name = "glib", version = "2.82.2.bcr.5")

bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.9.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# Python Toolchain Workaround
bazel_dep(name = "rules_python", version = "1.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.10",
)
