load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(
        ["*"],
    ),
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "rules",
    srcs = ["rules.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "app_building",
    srcs = ["app_building.bzl"],
    visibility = ["//visibility:public"],
)
