# MIT License

# Copyright (c) 2025 Vector Group

# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:

# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "private/common/component_refs.bzl",
        "private/generate.bzl",
        "private/start.bzl",
        "private/templates/filter_linux.sh.tpl",
        "private/templates/filter_windows.ps1.tpl",
        "generate.bzl",
        "defs.bzl",
        "private/toolchains.bzl",
        "MODULE.bazel",
        "BUILD.bazel",
    ],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "generate",
    srcs = ["generate.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "toolchains",
    srcs = ["private/toolchains.bzl"],
    visibility = ["//visibility:public"],
)
